# Ingnomia

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMake_Build.bat  Changelog.md  DESIGN_ITEM_SYSTEM.md  Ingnomia.manifest  Ingnomia.rc  Ingnomia.sln  Ingnomia.vcxproj  Ingnomia.vcxproj.filters  README.md  changelog.txt  config.cfg  config.json  constructions.html  database.sql  devmessages.txt  food.html  gnomes.qrc  index.html  items.html  keybindings.json  plants.html  resource.h  vcpkg-configuration.json  vcpkg.json  workshops.html
content/: CMakeLists.txt
content/JSON/: config.json  embarkpresets.json  menusettings.json  newgame.json  profs.json
content/ai/: animal_big.xml  animal_guard_dog.xml  animal_hunter.xml  animal_nighthunter.xml  animal_small_pasture.xml  animal_standard.xml  automaton_mark1.xml  egg.xml  gnome_standard.xml  gnome_trader.xml  monster_standard.xml
content/db/: assets.textproto  ingnomia.db.sql
content/shaders/: axle_f.glsl  axle_f.sc  axle_v.sc  selection_f.glsl  selection_f.sc  selection_v.glsl  selection_v.sc  thoughtbubble_f.glsl  thoughtbubble_v.glsl  thoughtbubble_v.sc  world_f.glsl  world_f.sc  world_v.glsl  world_v.sc  worldupdate_c.sc
content/shaders/noesis/: Clear_FS.shader  Downsample_FS.shader  Makefile.bgfx  OpacityLinear_FS.shader  OpacityPatternMirrorV_FS.shader  OpacityPatternRepeat_FS.shader  OpacityRadial_FS.shader  OpacitySolid_FS.shader  PathAaPatternClamp_FS.shader  PathAaPatternMirrorV_FS.shader  PathAaPatternRepeat_FS.shader  PathAaSolid_FS.shader  PathLinear_FS.shader  (+21 more)
content/xaml/: Agriculture.xaml  CreatureInfo.xaml  DebugGui.xaml  GameGui.xaml  IngamePage.xaml  InventoryGui.xaml  LoadGamePage.xaml  Main.xaml  MainMenu.xaml  MainPage.xaml  MilitaryGui.xaml  Neighbors.xaml  NewGamePage.xaml  PopulationWindow.xaml  SelectionGui.xaml  SettingsPage.xaml  StockpileGui.xaml  TileInfo.xaml  WaitPage.xaml  WorkshopGui.xaml  agriculture.xaml  creatureinfo.xaml  debug.xaml  gamegui.xaml  ingamepage.xaml  loadgamepage.xaml  main.xaml  mainmenu.xaml  mainpage.xaml  military.xaml  neighbors.xaml  newgamepage.xaml  population.xaml  settingspage.xaml  stockpilegui.xaml  tileinfo.xaml  waitpage.xaml  workshopgui.xaml
shaders/: CMakeLists.txt  axle_f.glsl  axle_v.glsl  selection_f.glsl  thoughtbubble_f.glsl  thoughtbubble_v.glsl  world_f.glsl  world_v.glsl  worldupdate_c.glsl
shaders/game/: axle_FS.shader  axle_VS.shader  selection_FS.shader  thoughtbubble_FS.shader  thoughtbubble_VS.shader  varying.def.shader  world_FS.shader  world_VS.shader  worldupdate_c.shader
shaders/noesis/: BlurSolid_FS.shader  FSMain.ishader  Mask_FS.shader  OpacityPatternClamp_FS.shader  OpacityPatternMirrorU_FS.shader  OpacityPatternMirror_FS.shader  OpacityPattern_FS.shader  PathAaLinear_FS.shader  PathAaPatternMirrorU_FS.shader  PathAaPatternMirror_FS.shader  PathAaPattern_FS.shader  PathAaRadial_FS.shader  PathPatternMirrorU_FS.shader  PathPatternMirrorV_FS.shader  PathPatternRepeat_FS.shader  PathRadial_FS.shader  PosColorUv0RectImagePosition_VS.shader  PosColorUv0Uv1_VS.shader  PosColorUv1Rect_VS.shader  PosColor_VS.shader  PosUv0Coverage_VS.shader  PosUv0RectCoverage_VS.shader  PosUv0RectTileCoverage_VS.shader  PosUv0Rect_VS.shader  PosUv0Uv1Downsample_VS.shader  PosUv0Uv1RectTile_VS.shader  PosUv0Uv1Sdf_VS.shader  PosUv0Uv1_VS.shader  PosUv0_VS.shader  Rgba_FS.shader  SdfLcdLinear_FS.shader  SdfLcdPatternMirrorU_FS.shader  SdfLcdPatternMirrorV_FS.shader  SdfLcdPattern_FS.shader  SdfLinear_FS.shader  SdfPatternClamp_FS.shader  SdfPatternMirrorU_FS.shader  SdfPatternRepeat_FS.shader  SdfPattern_FS.shader  SdfRadial_FS.shader  (+3 more)
src/: CMakeLists.txt  bgfxUtils.cpp  bgfxUtils.h  main.cpp  mainSDL.cpp  pch.cpp  pch.h  version.h  version.h.in
src/base/: CMakeLists.txt  PathFinderThread.cpp  PathFinderThread.h  SDL_util.cpp  SDL_util.h  config.cpp  config.h  containersHelper.cpp  containersHelper.h  counter.h  crashhandler.cpp  crashhandler.h  db.cpp  db.h  dbhelper.cpp  dbhelper.h  dbstructs.h  enums.h  filter.cpp  filter.h  fmt_formats.h  gamestate.cpp  gamestate.h  global.cpp  global.h  io.cpp  io.h  iterators.h  lightmap.cpp  lightmap.h  logger.cpp  logger.h  modmanager.cpp  modmanager.h  networkclient.cpp  networkclient.h  networkserver.cpp  networkserver.h  octree.cpp  octree.h  (+16 more)
src/debug/: debugmanager.cpp  debugmanager.h  debugutils.cpp  debugutils.h
src/game/: CMakeLists.txt  anatomy.cpp  anatomy.h  animal.cpp  animal.h  automaton.cpp  automaton.h  canwork.cpp  canwork.h  creature.cpp  creature.h  creatureEquipment.cpp  creaturefactory.cpp  creaturefactory.h  creaturemanager.cpp  creaturemanager.h  eventmanager.cpp  eventmanager.h  farm.cpp  farm.h  farmingmanager.cpp  farmingmanager.h  fluidmanager.cpp  fluidmanager.h  game.cpp  game.h  gamemanager.cpp  gamemanager.h  gnome.cpp  gnome.h  gnomeactions.cpp  gnomeconditions.cpp  gnomefactory.cpp  gnomefactory.h  gnomemanager.cpp  gnomemanager.h  gnometrader.cpp  gnometrader.h  grove.cpp  grove.h  (+53 more)
src/gfx/: CMakeLists.txt  constants.h  renderer.cpp  sprite.cpp  sprite.h  spritefactory.cpp  spritefactory.h
src/gui/: .gitignore  CMakeLists.txt  SDL_mainrenderer.cpp  SDL_mainrenderer.h  SDL_mainwindow.cpp  SDL_mainwindow.h  aggregatoragri.cpp  aggregatoragri.h  aggregatorcreatureinfo.cpp  aggregatorcreatureinfo.h  aggregatordebug.cpp  aggregatordebug.h  aggregatorinventory.cpp  aggregatorinventory.h  aggregatorloadgame.cpp  aggregatorloadgame.h  aggregatormilitary.cpp  aggregatormilitary.h  aggregatorneighbors.cpp  aggregatorneighbors.h  aggregatorpopulation.cpp  aggregatorpopulation.h  aggregatorrenderer.cpp  aggregatorrenderer.h  aggregatorselection.cpp  aggregatorselection.h  aggregatorsettings.cpp  aggregatorsettings.h  aggregatorsound.cpp  aggregatorsound.h  aggregatorstockpile.cpp  aggregatorstockpile.h  aggregatortileinfo.cpp  aggregatortileinfo.h  aggregatorworkshop.cpp  aggregatorworkshop.h  eventconnector.cpp  eventconnector.h  keybindings.cpp  keybindings.h  (+11 more)
src/protocol/: CMakeLists.txt  assets.proto
test/behaviortree/: CMakeLists.txt  main.cpp
(+523 files in other folders)
