target_sources(${PROJECT_NAME}
	PRIVATE
		config.cpp
		db.cpp
		dbhelper.cpp
		filter.cpp
		gamestate.cpp
		global.cpp
		io.cpp
		lightmap.cpp
		logger.cpp
		modmanager.cpp
		networkclient.cpp
		networkserver.cpp
		octree.cpp
		pathfinder.cpp
		PathFinderThread.cpp
		region.cpp
		regionmap.cpp
		selection.cpp
		util.cpp
)

add_subdirectory(behaviortree)
